Added i18n patch from Olivier Heintz
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4018 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/order/config/OrderUiLabels_fr.properties
+++ b/components/order/config/OrderUiLabels_fr.properties
@@ -15,6 +15,7 @@ AccountingCardType=Type de carte
 AccountingCompanyNameAccount=Nom de la soci\u00e9t\u00e9 sur le compte
 AccountingCompanyNameCard=Nom de la soci\u00e9t\u00e9 sur la carte
 AccountingCreditCard=Carte de Cr\u00e9dit
+AccountingCurrency=Devise
 AccountingEFTAccount=R\u00e9f\u00e9rence bancaire
 AccountingExpirationDate=Date d'expiration
 AccountingFirstNameCard=Pr\u00e9nom sur la carte
@@ -30,6 +31,7 @@ AccountingPayment=Facturation
 AccountingPaymentAlreadyReceived=Paiement d\u00e9j\u00e0 re\u00e7u
 AccountingPleaseSendPaymentTo=Merci d'envoyer le paiement \u00e0 :
 AccountingPrefixCard=Pr\u00e9fixe sur la carte
+AccountingReceivePayment=Recevoir le paiement
 AccountingRoutingNumber=Num\u00e9ro de routage
 AccountingSuffixCard=Suffixe sur la carte
 
@@ -53,12 +55,20 @@ checkhelper.sales_order_lines_lookup_failed=Erreur : Les lignes de commande ne s
 checkhelper.totals_do_not_match_order_total=Les totaux ne correspondent pas au total de la commande.
 checkhelpertotalsdonotmatchordertotal=Les totaux ne correspondent pas au total de la commande.
  
+CommonAdd=Ajouter 
 CommonAddDefault=Ajouter les valeurs par d\u00E9faut
 CommonAddressLine=Adresse
 CommonAll=Tous
 CommonAllowSolicitation=(N\u00e9cessite une autorisation?) 
 CommonAny=Un
+CommonAnyOrderStatus=Tout statut
+CommonAnyOrderType=Tout type
+CommonAnyReturnStatus=Tout Statut
+CommonAnyRoleType=Tout R\u00f4le
+CommonAnyStore=Toute marque
+CommonAnyWebSite=Tout Site
 CommonApply=Valider
+CommonAt=\u00e0
 CommonAttentionName=Nom d'attention
 CommonAttn=Attention
 CommonAnyReturnStatus=N'importe quel statut
@@ -66,6 +76,7 @@ CommonAvailable= Disponible
 CommonBenefit= Avantage
 CommonBy=De
 CommonCancel=Annuler
+CommonCancelAll=Tout annuler
 CommonChange=Modifier
 CommonCity=Ville
 CommonComment=Commentaire
@@ -81,8 +92,10 @@ CommonDays=Jours
 CommonDescription=Description
 CommonDetails=D\u00e9tails
 CommonDisabled=non permis
+CommonEdit=Modifier
 CommonFind=Rechercher
 CommonFrom=De
+CommonGoBack=Retour
 CommonGroup=Groupe
 CommonHideFields=Cacher les zones de s\u00e9lection
 CommonIdentifier=Identifiant
@@ -111,6 +124,7 @@ CommonRegistred=Enregistrement connexion utilisateur
 CommonReports=Etats
 CommonRequired=Obligatoire
 CommonReturnStatus=Statut du retour
+CommonSave=Save
 CommonSelectOne=S\u00e9lectionnez en une
 CommonSelected=choisi
 CommonSet=Action
@@ -178,11 +192,16 @@ FacilityWaitEntireOrderReady=Attendre que la commande soit compl\u00e8te avant d
 item.product_not_found=Article non trouv\u00e9, pas d'ajout dans le panier. [r\u00e9f article\: ${productId}]
 
 OrderAddCode=Ajouter un code promotion
+OrderAddNote=Ajouter une note
 OrderAddToOrder=Ajouter \u00e0 la commande
 OrderAdjustment=Ajustement
 OrderAdjustments=Ajustements
+OrderAddress=Adresse
+OrderAllowSplit=Accepter le partiel
+OrderApproveOrder=Approuvez la commande
 OrderBeSureIncludeOrder=Soyez s\u00fbr d'inclure votre ordre
 OrderCancelAllItems=Supprimer tous les articles
+OrderCancelled=Annul\u00e9e
 OrderCannotBeChanged=(Ne peut \u00eatre modifi\u00e9 sans r\u00e9initialis\u00e9 la commande.) 
 OrderCartTotal=Total du chariot
 OrderChooseFollowingForGift=Vous pouvez \u00e9galement choisir parmi ces promotions
@@ -194,7 +213,9 @@ OrderContactInformation=Information sur l'acteur
 OrderCreateNewReturn=Cr\u00e9er un nouveau retour
 OrderCreateOrder=Cr\u00e9ation de la commande
 OrderCreateReturn=Cr\u00e9er un retour
+OrderCurrentStatus=Statut Actuel
 OrderCustomerPo=R\u00e9f. Client
+OrderDate=Date Commande
 OrderDateOrdered=Date Command\u00e9e 
 OrderDesiredDeliveryDate=D\u00e9lai de livraison souhait\u00e9
 OrderDestination=Destination
@@ -215,16 +236,21 @@ OrderItemTotal=Total Article
 OrderLookupOrder=Lancer recherche commande(s)
 OrderLookupReturn=Lancer recherche retour(s)
 OrderNoGiftWrap=Aucune Promotion
+OrderNoNotes=Aucune note pour cette commande.
 OrderNoOrderFound=Aucune commande trouv\u00e9e
 OrderNoOrderItemsToDisplay=Aucune ligne de commande \u00e0 afficher.
-OrderNoReturnFound=Aucun retour trouv\u00e9.
+OrderNote=Note
+OrderNotes=Notes
+OrderNotesCreateNew=Cr\u00e9er nouvelleOrderNoReturnFound=Aucun retour trouv\u00e9.
 OrderNoReturnFoundWithId=Aucun retour trouv\u00e9 avec cette r\u00e9f\u00e9rence.
+OrderNotShipped=Non Livré
 OrderNotUsedForPurchase=Non utilis\u00e9 pour les commandes d'achat
 OrderNotUsedForSales=Non utilis\u00e9 pour les commandes de vente
 OrderOfflineCheckMoney=En diff\u00e9r\u00e9:  V\u00e9rifiez le mandat
 OrderOrder=Commande
 OrderOrderConfirmation=Confirmation de la commande
 OrderOrderDate=Date commande
+OrderOrdered=Command\u00e9e
 OrderOrderEntry=Cr\u00e9ation
 OrderOrderEntryCustomerInfo=Information sur le client
 OrderOrderEntryPaymentSettings=Renseignements sur la facturation
@@ -252,6 +278,7 @@ OrderRecalculateOrder=Recalcul de la commande
 OrderReceiveReturn=Recevoir un retour
 OrderRemainingSubTotal=Sous-Total restant
 OrderRequiredForSO=Obligatoire pour les commandes de vente
+OrderRemaining=Restante
 OrderReturned=Retourn\u00e9
 OrderReturnFound=Retour(s) trouv\u00e9(s)
 OrderReturnFromAddress=Retour de l'addresse
@@ -265,11 +292,13 @@ OrderSalesTax=T.V.A.
 OrderSelectPartyToOrder=S\u00e9lectionner le type d'acteur \u00e0 associer \u00e0 la commande
 OrderSelectedGiftNotAvailableForAll=La promotion ne s'applique pas sur tous les articles. Ceux sur lesquels elle peut s'appliquer sont s\u00e9lectionn\u00e9s, les autres restent inchang\u00e9s. 
 OrderSendEmail=Envoi E-mail
+OrderShipGroup=Num\u00e9ro de lot
 OrderShipmentInformation=Informations sur le moyen d'exp\u00e9dition
 OrderSplittingPreference=Choix de livraison
 OrderStartDateTime=D\u00e9but (Date/Heure)
 OrderStatusHistory=Evolution des statuts
 OrderSubTotal=Sous Total
+OrderSurvey=Apercu
 OrderThisOrderGift=Cette commande est une promotion
 OrderThisOrderNotGift=Cette commande n'est pas une promotion
 OrderTotalDue=Total D\u00fb
@@ -279,6 +308,7 @@ OrderTotalShippingAndHandling=Total exp\u00e9dition et manipulation
 OrderUnitList=Unit\u00e9 / Liste
 OrderUseDefaultComment=Utiliser par d\u00e9faut le commentaire pour les autres lignes
 OrderUseDefaultDesiredDeliveryDate=Utiliser par d\u00e9faut la date de livraison souhait\u00e9 pour les autres lignes
+OrderViewEditDelivery=Affichage/Modification des options de colisage
 OrderViewPermissionError=Vous n'avez pas la permission de voir cette page. ("ORDERMGR_VIEW" ou "ORDERMGR_ADMIN" est n\u00E9cessaire)
 
 #OrderTrackingNumber=Tracking Number
