Added i18n of Contact Us from Uli Suppa; Jira #OFBIZ-53
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4089 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/ecommerce/config/EcommerceUiLabels_de.properties
+++ b/components/ecommerce/config/EcommerceUiLabels_de.properties
@@ -83,6 +83,7 @@ CommonClear=leeren
 CommonClickHere=Dann Klicken Sie hier
 CommonComment=Anmerkungen
 CommonComments=Anmerkungen
+CommonContactUs=Kontakt
 CommonContinue=Forsetzen
 CommonCouldBeUsedAs=Kann verwendet werden als 
 CommonCreate=anlegen
@@ -499,5 +500,4 @@ ProductSortedBy=Sortiert nach
 ProductUsuallyShipsIn=gew\u00F6hnlicherweise Versand in 
 ProductYouSearchedFor=Sie suchen nach
 #eigene Angefügte:
-ContactUs=Kontakt
 MostRecentlyUsed=Zuletzt Ausgew\u00E4hlte Artikel
