Added some cleanup patches from Jacopo Cappellato
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4210 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/product/config/ProductUiLabels_fr.properties
+++ b/components/product/config/ProductUiLabels_fr.properties
@@ -1014,3 +1014,5 @@ productSearchEvents.added_param_features=Charact\u00E9ristiques ${numAdded} ajou
 productSearchEvents.error_getting_results=Erreur survenue pendant la recherche
 
 
+
+ProductSubProduct=SubProduct
