Fixed up a few labels.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4347 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/manufacturing/config/ManufacturingUiLabels_fr.properties
+++ b/components/manufacturing/config/ManufacturingUiLabels_fr.properties
@@ -1,126 +1,3 @@
-####
-# OFBiz UiLabel Properties used for the Manufacturing component
-# Cette traduction a ete realisee par l'equipe de Nereide, societe specialisee dans l'integration de l'ERP OFBiz aupres des PME.
-# Si vous remarquez des erreurs ou des libelles incorrects, n'hesitez pas a nous en faire part : traductionOFBiz@nereide.biz
-#
-Accounting=Comptabilit\u00e9
-Catalog=Article
-Content=Contenu
-Facility=Stock
-Manufacturing=Fabrication
-Marketing=Marketing
-Order=Commande
-Party=Acteur
-WebTools=Adm. Sys.
-WorkEffort=T\u00e2che
-
-CommonAdd=Ajouter
-CommonAll=Tous
-CommonAnd=et
-CommonAny=Indiff\u00e9rent
-CommonAssociate=associ\u00e9
-#CommonAt=Le
-CommonBack=Retour
-CommonBackToList=Retour \u00e0 la liste
-#CommonBy=De
-CommonChecked=V\u00E9rifi\u00e9
-#CommonComingSoon=\u00C7a arrive bient\u00F4t\!
-#CommonCopy=Copier
-CommonCountry=Pays
-#CommonCreate=Cr\u00E9er
-#CommonCreateNew=Nouveau
-CommonDay=Jour
-CommonDelete=Supprimer
-CommonDescription=Description
-CommonDetail=D\u00E9tail
-CommonDetails=D\u00E9tails
-#CommonDuplicate=Copier
-CommonEdit=Editer
-CommonElementsFound=El\u00e9ments trouv\u00e9s
-CommonEventDate=date de l'\u00e9v\u00e9nement
-#CommonExpireAll=Expirer tous
-#CommonExpire=Expire
-#CommonFindAll=Rech. tous
-CommonFind=Rechercher
-#CommonFinishDate=Date de fin
-#CommonFor=pour
-CommonFormatDateFieldNotCorrect=La saisi d'un champ de date est incorrect , le format doit-\u00eatre AAAA-mm-jj HH:mm:ss
-CommonFriday=Vendredi
-CommonFromDate=de la date
-#CommonFromDateMissing=Date de d\u00E9but absente
-#CommonFromDateNotValidDateTime=Format (date-heure) de la date de d\u00E9but non valide .
-#CommonFromDateThruDate=de la date / jusqu'\u00E0 la date
-#CommonFromDateTime=\u00E0 partir de la date et  de l'heure
-#CommonFrom=De
-#CommonGoBack=Retour
-CommonHideFields=Cacher les champs
-CommonHour=Heure
-#CommonIdCode=Code r\u00E9f\u00E9rence
-CommonId=Ident.
-#CommonLarge=Large
-#CommonListAll=Tout lister
-CommonLogin=Connexion
-CommonLogout=Sortie
-CommonLookup=Rechercher
-CommonMain=Principal
-#CommonMedium=Moyen
-CommonMonday=Lundi
-#CommonNA=N/A
-#CommonNew=Nouveau
-CommonNewSelection=Nouvelle s\u00E9lection
-CommonNext=Suivant
-#CommonN=N
-#CommonNone=Aucun
-#CommonNo=Non
-CommonNoElementFound=aucun \u00e9l\u00e9ment trouv\u00e9
-#CommonNote=Note
-#CommonNotes=Notes
-CommonNotModifRecreat=ne peut-\u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
-CommonNotYetImplemented=Pas encore développer !!
-#CommonOpenPageNewWindow=ouvrir la page dans une nouvelle fen\u00EAtre
-#CommonOpenPageNewW=ouvrir la page dans une nouvelle fen\u00EAtre
-CommonOf=de
-#CommonOr=Ou
-CommonPassword=Mot de passe\:
-CommonPrevious=Pr\u00E9c\u00E9dent
-CommonQuantity=Quantit\u00e9
-CommonRegistred=Enregistrement connexion utilisateur
-#CommonRemoveExpired=Supp. les <expir\u00E9s>
-#CommonRemove=Supp.
-#CommonReset=Reset
-CommonResultLookup=R\u00e9sultat de la recherche
-CommonSaturday=Samedi
-CommonSave=Enrg
-#CommonSecurity=S\u00E9curit\u00E9
-#CommonSendEmail=envoyer email
-CommonSelected=S\u00e9lectionner
-CommonSelection=S\u00e9lection
-#CommonSequence=suite
-CommonSequenceNum=N\u00b0 de sequence
-CommonSet=Action
-CommonShowLookupFields=Montrer les champs de recherche
-#CommonSince=Depuis
-#CommonSmall=Petit
-#CommonStartDate=Date de d\u00E9but
-CommonStatus=Statut
-CommonSubmit=Envoyer
-CommonSunday=Dimanche
-#CommonTest=Test en fran\u00E7ais
-CommonThruDate=jusqu'\u00E0 la date
-#CommonThruDateTime=jusqu'\u00E0 la date & l'heure
-#CommonThru=Jusqu'\u00E0
-CommonThursday=Jeudi
-CommonTuesday=Mardi
-#CommonUom=UOM
-#CommonUpdated=Mise \u00E0 jour
-CommonUpdate=Mettre \u00E0 jour
-CommonUpdateLink=Mettre \u00E0 jour le lien
-CommonUsername=Nom d'utilisateur\:
-#CommonValue=Valeur
-CommonView=Voir
-CommonWednesday=Mercredi
-CommonWeek=Semaine
-CommonWelcome=Bonjour
 #CommonWhere=O\u00F9
 #CommonYes=Oui
 
@@ -195,16 +72,13 @@ ManufacturingExceptionDateStartTime=Date de l'exception et heure de d\u00e9but
 ManufacturingExceptionDateStart=Date de d\u00e9part de l'exception
 ManufacturingExplosion=D\u00e9velopper %explosion%
 ManufacturingFindBillOfMaterials=Recherche nomenclature
-ManufacturingFindInventoryEventPlan=Liste mouvements planifi\u00e9s de stock
 ManufacturingFindParts=Recherche articles
 ManufacturingFindProductionRun=Liste Ordre Fabrication
 ManufacturingFindRouting=Recherche gamme
 ManufacturingFindRoutingTasks=Recherche op\u00e9rations
 ManufacturingImplosion=%Implosion%
-ManufacturingInitialisation=Initialisation
 ManufacturingInstruction=Instruction
 ManufacturingInventoryEventPlanned=mouvements planifi\u00e9s de stock
-ManufacturingInventoryEventPlanTypeId=Type mouvt plan. stock
 ManufacturingJobShop=O.Fab
 ManufacturingListCalendarWeek=Liste des semaines
 ManufacturingListOfProductionRunComponents=Liste des composants de l'Ordre de Fabrication
@@ -231,13 +105,7 @@ ManufacturingNewRoutingTask=Cr\u00e9er une op\u00e9ration
 ManufacturingNoCalendarFound=Il n'y a pas de calendrier de d\u00e9fini
 ManufacturingNoMachineGroupFound=Il n'y a pas de groupe de machine de d\u00e9fini
 ManufacturingNoProductionRunSelected=Pas d'Ordre de Fabrication sélectionné
-ManufacturingPartBreakdown=%Article de rupture%
-ManufacturingPartBOMType=Type d'article nomenclature
-ManufacturingPartDepth=code de plus bas niveau
-ManufacturingParts=Articles
-ManufacturingPartId=Ident. article
-ManufacturingPartName=Lib\u00e9ll\u00e9 article
-ManufacturingPartType=Type d'article
+ManufacturingProductLevel=code de plus bas niveau
 ManufacturingProductComponents=Composant de cet article
 ManufacturingProductComponentOf=Cet article est un composant de
 ManufacturingProductHasNoBom=L'article n'a pas de nomenclature
@@ -272,10 +140,7 @@ ManufacturingRoutingTaskAssocCreateSuccessfully=Association de l'op\u00e9ration 
 ManufacturingRoutingTaskCopiedSuccessfully=Op\u00e9ration copi\u00e9e avec succ\u00e9s
 ManufacturingRoutingTaskId=Identifiant op\u00e9ration
 ManufacturingRoutingTaskToMissing=Le champ op\u00e9ration est obligatoire
-ManufacturingRuleId=R\u00e9f\u00e9rence de la r\u00e9gle
-ManufacturingRuleOperator=Op\u00e9ration de la r\u00e9gle
-ManufacturingRuleOperator=R\u00e9gle op\u00e9ration
-ManufacturingRunningMrp=Lancement du MRP
+ManufacturingRunMrp=Lancement du MRP
 ManufacturingScrapFactor=Taux de rebut
 ManufacturingStartDate=Date de d\u00e9but
 ManufacturingStartTime=Heure de d\u00e9but
@@ -291,22 +156,17 @@ ManufacturingTwoRoutingTaskWithSameSeqId=Deux op\u00e9rations au m\u00eame num\u
 ManufacturingUpdateCalendarWeek=Mise \u00e0 jour d'une semaine
 ManufacturingUpdateCalendar=Mise \u00e0 jour du calendrier
 ManufacturingUpdateMachineGroup=Mise \u00e0 jour du groupe de machine
-ManufacturingUpdateRoutingTaskAssoc=Mettre \u00e0 jour la composition
 ManufacturingViewPermissionError=Vous n'avez pas la permission de voir cette page. ("MANUFACTURING_VIEW" ou "MANUFACTURING_ADMIN" n\u00E9cessaire)
 ManufacturingVisitType=Algorithme de recherche
 
 ProductProduct=Article
-ProductProductFeature=Carat\u00e9ristique de l'article
 ProductProductId=R\u00E9f\u00E9rence de l'article
 ProductProductIdFor=R\u00E9f\u00E9rence de l'article souche
 ProductProductIdIn=R\u00E9f\u00E9rence de l'article associ\u00e9
-ProductProductIdInSubs=%IdInSubs% de l'article
 ProductProductIdMissing=R\u00E9f. article absente
 ProductProductInternalName=Description de l'article
 ProductProductName=Nom de l'article
 ProductProductType=Type d'article
-
-CommonRun=Run
 
 ManufacturingLLCInit=Init Low Level Codes
 
@@ -375,3 +235,7 @@ ManufacturingShowBOMAssocs=Show BOM
 ManufacturingCopyBOMAssocs=Copy BOM
 
 ManufacturingCopyToProductId=To Product Id
+
+ManufacturingBomType=Bom Type
+
+ManufacturingBomSimulation=Bom Simulation
