--- a/components/manufacturing/config/ManufacturingUiLabels_it.properties
+++ b/components/manufacturing/config/ManufacturingUiLabels_it.properties
@@ -1,40 +1,3 @@
-####
-# OFBiz UiLabel Properties used for the accounting module 
-# author     Jacopo Cappellato (tiz@sastau.it)
-#
-CommonAdd=Aggiungi
-CommonBackToList=Ritorna alla Lista
-CommonDelete=Elimina
-CommonDescription=Descrizione
-CommonEdit=Modifica
-CommonElementsFound=Elementi Trovati
-CommonFriday=Venerd\u00EC
-CommonFromDate=Da Data
-CommonHideFields=Nascondi i Campi
-CommonId=ID
-CommonLogin=Login
-CommonLogout=Esci
-CommonLookup=Cerca
-CommonMain=Principale
-CommonMonday=Luned\u00EC
-CommonNext=Successiva
-CommonNoElementFound=Nessun elemento trovato
-CommonNotModifRecreat=impossibile modificare senza ricreare
-CommonOf=di
-CommonPassword=Password
-CommonPrevious=Precedente
-CommonRegistred=Login Utente Registrato
-CommonSaturday=Sabato
-CommonSave=Salva
-CommonSelected=Selezionato
-CommonShowLookupFields=Mostra i Campi di Ricerca
-CommonSunday=Domenica
-CommonThursday=Gioved\u00EC
-CommonTuesday=Marted\u00EC
-CommonUpdate=Aggiorna
-CommonUsername=Utente
-CommonWednesday=Mercoled\u00EC
-CommonWelcome=Benvenuto
 
 ManufacturingBillOfMaterials=Distinte Basi
 ManufacturingCalendar=Calendario
@@ -85,13 +48,7 @@ ManufacturingNewCalendarWeek=Nuova Settimana
 ManufacturingNewMachineGroup=Nuovo Gruppo Macchine
 ManufacturingNoCalendarFound=Nessun Calendario Trovato
 ManufacturingNoMachineGroupFound=Nessun Gruppo Macchine Trovato
-ManufacturingPartBOMType=Tipo di Distinta Base
-ManufacturingPartBreakdown=Esplosione Scalare
-ManufacturingPartDepth=Livello
-ManufacturingPartId=Codice Componente
-ManufacturingPartName=Nome Componente
-ManufacturingParts=Componenti
-ManufacturingPartType=Tipo Componente
+ManufacturingProductLevel=Livello
 ManufacturingQuantity=Quantit\u00E0
 ManufacturingStartTime=Ora di Inizio
 ManufacturingSummarizedPartBreakdown=Esplosione Scalare Sommarizzata
@@ -121,11 +78,7 @@ ManufacturingExplosion=Esplosione
 
 ManufacturingImplosion=Implosione
 
-CommonThruDate=A Data
-
 ManufacturingProductIdTo=Codice Prodotto A
-
-CommonSequenceNum=Sequenza
 
 ManufacturingReason=Motivo
 
@@ -135,17 +88,13 @@ ManufacturingProductComponents=Componenti del Prodotto
 
 ManufacturingProductComponentOf=Questo Prodotto \u00E8 un Componente di
 
-CommonView=Visualizza
-
 PageTitleEditProductManufacturingRules=Regole Di Configurazione
 
 ManufacturingManufacturingRules=Regole di Configurazione
 
 ManufacturingScrapFactor=Sfrido
 
-CommonDay=Giorno
-
-ManufacturingRunningMrp=Esecuzione MRP
+ManufacturingRunMrp=Esecuzione MRP
 
 ManufacturingNewRouting=Nuovo Ciclo
 
@@ -179,21 +128,11 @@ ManufacturingTaskId=Codice Operazione
 
 ManufacturingMrp=MRP
 
-CommonFormatDateFieldNotCorrect=Formato di data non corretto
-
-CommonHour=Ora
-
-CommonAny=Qualsiasi
-
-CommonSubmit=Immetti
-
 ManufacturingNewRoutingTask=Nuova Operazione
 
 ManufacturingTwoRoutingTaskWithSameSeqId=Due Operazioni con la stessa sequenza
 
 ManufacturingAnyMachineGroup=Qualsiasi Gruppo Macchine
-
-CommonWeek=Settimana
 
 ManufacturingRoutingTask=Operazione
 
@@ -202,8 +141,6 @@ ManufacturingTaskPurpose=Tipo Operazione
 ManufacturingAddExistingRoutingTask=Aggiunta operazione esistente
 
 ManufacturingRoutingSeqIdMissing=Sequenza di ciclo non presente
-
-CommonResultLookup=Risultato di Ricerca
 
 ManufacturingRoutingTaskCopiedSuccessfully=Operazione copiata con successo
 
@@ -225,33 +162,7 @@ ManufacturingRoutingTaskAssocCreateSuccessfully=Legame tra Operazioni Creato con
 
 ManufacturingEditRoutingTaskAssocDateValidity=Modifica la data di Validit\u00E0 del Legame tra Operazioni
 
-ManufacturingUpdateRoutingTaskAssoc=Aggiorna il Legame tra Operazioni
-
 ManufacturingVisitType=Tipo di Algoritmo
-
-Accounting=Contabilit\u00E0
-
-Catalog=Catalogo
-
-Content=Contenuti
-
-Facility=Stabilimenti
-
-Manufacturing=Produzione
-
-Marketing=Marketing
-
-Order=Ordini
-
-Party=Soggetti
-
-WebTools=Strumenti
-
-WorkEffort=Compiti
-
-CommonFind=Ricerca
-
-CommonSet=Imposta
 
 ManufacturingCreateProductionRun=Crea un Ordine di Produzione
 
@@ -287,46 +198,13 @@ PageTitleLookupRoutingTask=Visualizza le Operazioni
 
 PageTitleLookupVirtualProducts=Visualizza i  Prodotti Virtuali
 
-Product=Prodotto
-
 ProductProductName=Nome Prodotto
-
-ProductType=Tipo Prodotto
-
-CommonCountry=Paese
-
-CommonChecked=Selezionato
-
-CommonAll=Tutti
-
-CommonDetails=Dettagli
-
-CommonBack=Indietro
-
-CommonDetail=Dettaglio
-
-
-CommonAnd=e
-
-CommonEventDate=data evento
-
-CommonNewSelection=Nuova selezione
-
-CommonNotYetImplemented=Non ancora implementato
-
-CommonQuantity=Quantit\u00E0
-
-CommonSelection=Selezione
-
-CommonStatus=Stato
 
 ManufacturingATPDate=Data ATP
 
 ManufacturingEditProductionRun=Modifica Ordine di Produzione
 
 ManufacturingEditRouting=Modifica Ciclo
-
-CommonRun=Esegui
 
 ManufacturingLLCInit=Init Low Level Codes
 
@@ -399,3 +277,7 @@ ManufacturingShowBOMAssocs=Show BOM
 ManufacturingCopyBOMAssocs=Copy BOM
 
 ManufacturingCopyToProductId=To Product Id
+
+ManufacturingBomType=Tipo di distinta base
+
+ManufacturingBomSimulation=Simulazione di Distinta Base
