A bunch of missed references to the components directory
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4544 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels_pt_PT.properties
+++ b/applications/party/config/PartyUiLabels_pt_PT.properties
@@ -11,7 +11,7 @@
 ###################################################################
 ###################################################################
 ####
-# OFBiz UiLabel Properties used for the party components 
+# OFBiz UiLabel Properties used for the party component 
 #
  en=English
  fr=French
