Now there are two forms to init the order entry: one for sales orders and one for purchase orders. I think that now the page is easier to read (without all the javascript stuff) and also it will be easier to hide the sales/purchase form if the user is not allowed to take that kind of order. Bug fixes and cleanups.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4750 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -224,7 +224,7 @@ OrderFinalizeOrder=Finaliser la commande
 OrderFindOrder=Recherche de commande(s)
 OrderFindReturn=Recherche de retour(s)
 OrderGiftMessage=Message sur la promotion
-OrderGiftWrapAllItems=La promotion inclus tous les articles
+OrderGiftWrapAllItems=Toute promotion
 OrderGift=Promotion ?
 OrderGrandTotal=Total G\u00e9n\u00e9ral
 OrderIsThisGift=Est-ce une promotion?
