Added patch from Jacques Le Roux to fix some labels; Jira #OFBIZ-186
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4760 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -279,8 +279,8 @@ ProductActualServices=Service retenu
 ProductActualStartArrive=Retenu (D\u00e9but-Arriv\u00e9e)
 ProductActualTotal=Total effectif
 ProductActualTransport=Transport retenu
-ProductAddCatalogProdCat=Ajouter une cat\u00E9gorie d'article \u00E0 un catalogue (s\u00E9lectionner une cat\u00E9gorie et un type, optionnellement une date de d\u00E9part)
-ProductAddCatalogProductCategory=Ajout d'une cat\u00E9gorie d'article au catalogue (s\u00E9lectionnez la cat\u00E9gorie et le type, optionnellement une date de d\u00E9part)
+ProductAddCatalogProdCat=Ajouter une cat\u00E9gorie d'article \u00E0 un catalogue (s\u00E9lectionner un catalogue et un type, optionnellement une date de d\u00E9part)
+ProductAddCatalogProductCategory=Ajout d'une cat\u00E9gorie d'article au catalogue (s\u00E9lectionnez le catalogue et le type, optionnellement une date de d\u00E9part)
 ProductAddContentProduct=Ajout du contenu d'un article
 ProductAddEmail=Ajout d'adresse courriel
 ProductAddFacility=Ajout de donn\u00E9es stock
